// Client-to-server protocol.

syntax = "proto3";

package desert.server;

message Datagram {
  enum QosType {  // For quality-of-service only.
    UNKNOWN = 0;
    TEXT_CHAT = 1;  // Including hellos.
    AUDIO_CHAT = 2;
    VIDEO_CHAT = 3;
    FILE_TRANSFER = 4;
  }
  QosType qos_type = 1;
  int64 sequence_number = 2;  // Assigned by the server.
  string dst_channel_id = 3;
  string dst_hostname = 4;

  // Only for first hello from participant to room master. Works around
  // the fact that the client can't decode the libnacl boxed message at all
  // without verifying its signature.
  bytes src_public_signing_key = 5; 

  string src_uuid = 6;
  bytes nonce = 7;  // Same as nonce in payload.
  bytes payload = 8; 
}

message CreateChannelRequest {}

message CreateChannelResponse {
  string id = 1;
}

message TxRequest {
  Datagram datagram = 1;
}

message TxResponse {}

message SubRequest {
  string channel_id = 1;
}

message SubResponse {}

message UnsubRequest {
  string channel_id = 1;
}

message UnsubResponse {}

message C2sRequest {
  int64 id = 1;
  oneof method {
    TxRequest tx = 2;
    CreateChannelRequest create_channel = 3; 
    SubRequest sub = 4; 
    UnsubRequest unsub = 5; 
  }
}

message C2sResponse {
  int64 id = 1;  // Same as in request.
  oneof method {
    TxResponse tx = 2;
    CreateChannelResponse create_channel = 3;
    SubResponse sub = 4; 
    UnsubResponse unsub = 5; 
    Datagram incoming_datagram = 6;
  }
}
